PY-2016.3 <antonelpazargic@Antonels-MacBook-Pro.local Update surround.xml, AndroidComments.xml, Android.xml, AndroidLog.xml, AndroidParcelable.xml, ColdFusion.xml

--- a/templates/surround.xml
+++ b/templates/surround.xml
@@ -1,12 +1,5 @@
 <templateSet group="surround">
   <template name="SO" value="System.out.println($SELECTION$)" description="system out println the selection" toReformat="false" toShortenFQNames="true">
-    <context>
-      <option name="JAVA_CODE" value="true" />
-      <option name="JAVA_STATEMENT" value="false" />
-      <option name="JAVA_DECLARATION" value="false" />
-      <option name="JAVA_COMMENT" value="false" />
-      <option name="JAVA_STRING" value="false" />
-      <option name="COMPLETION" value="false" />
-    </context>
+    <context />
   </template>
 </templateSet>
