--- a/templates/surround.xml
+++ b/templates/surround.xml
@@ -1,5 +1,3 @@
 <templateSet group="surround">
-  <template name="SO" value="System.out.println($SELECTION$)" description="system out println the selection" toReformat="false" toShortenFQNames="true">
-    <context />
-  </template>
+  <template name="SO" value="System.out.println($SELECTION$)" description="system out println the selection" toReformat="false" toShortenFQNames="true" />
 </templateSet>
